--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,5 @@ DB_URI = "mongodb://localhost:27017/Ecommerce"
 
 JWT_SECRET = UGYFDFHLIUYTRESRDTYUIOPLKJHGTRED
 JWT_EXPIRE = 6d
+
+COOKIE_EXPIRE = 5
